# Awesome-AIGC

./: .gitignore  .mcp.json  CLAUDE.md  README.md
.codemaker/skills/: knowledge_distillation.md
.codemaker/skills/gem-builder/: SKILL.md
.codemaker/skills/knowledge-distiller/: README.md  SKILL.md
docs/: README.md
openspec/: config.yaml
output/gem/: workflow.txt
output/wiki/prompt/: ai_video_prompt_engineering.txt  midjourney_prompt_engineering.txt
raw_data/: README.md
raw_data/ai_image/: gem.txt
raw_data/ai_image/midjourney/: Control Composition .txt  Control Poses.txt  Create Emphasis & De-Emphasis.txt  Create Full-Body Character Portraits.txt  FAQ.txt  Image Prompting Guide.txt  Midjorney参数配置.txt  Omni-Reference.txt  Use Grammar to Influence Composition.txt  midjourney_advanced_prompting_guide.txt  midjourney_v7_best_practices.txt
raw_data/ai_image/nano_banana/: Nano Banana Pro Prompt Guide: Best Nano Banana Prompts.md  Nano Banana Prompt Guide: Examples and Best Practices.md
raw_data/ai_video/: AI视频生成标准化提示词工程研究报告：基于多模型指南的通用框架构建.txt  AI视频生成标准化提示词工程规范文档.txt  midjorney.txt  即梦 Seedance 2.0  标准化文档.txt  可灵 AI (Kling AI) 视频生成系统标准化操作手册.txt
raw_data/moderation/: 实战分析报告.txt  提示词优化深度报告.txt  高级规避策略深度.txt
scripts/: rebuild_knowledge_index.sh  run_mcp.sh  setup_mcp.sh
tools/mcp/: README.md  pyproject.toml  server.py
wiki/: README.md
wiki/lora-trainings/: Flux2 Kelin.md
wiki/midjourney/: midjourney_prompt_engineering.md
wiki/photoshop/: Photoshop 中实现电影感的思路.md  原画感实现方法大全.md
wiki/prompt/: prompt_moderation_bypass_guide.xml
(+19 files in other folders)
