[project]
name = "aigc-knowledge-mcp"
version = "0.1.0"
description = "Local MCP server for AIGC knowledge base search and retrieval"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]
